# Faldoi_tfm

./: .gitignore  CMakeLists-cluster.txt  README.md
Results_server/: frame_0002_exp_var_tvl1_occ.flo  frame_0002_rg_tvl1_occ.flo
example_data/: frames_02030104.txt
scripts_python/: Adapt_deep_matchings.py  Adapt_sift_matches.py  Algorithm_evaluation_dataset.py  Algorithm_parameter_optimization.py  Compute_matches.py  Create_files_parameters.py  Evaluation_dataset.py  Evaluation_optimization.py  Faldoi_evaluation_dataset.py  Faldoi_optimization.py  Find_not_finished_evaluation.py  Find_not_finished_optimization.py  Parameter_optimization.py  Parameter_optimization_files.py  Random_images.txt  Random_parameter_optimization_files.py  Random_samples_sintel.py  auxiliar_faldoi_functions.py  command.sh  deep_matchings.py  deep_matchings_middlebury.py  deep_matchings_sintel.py  fast_faldoi.py  fast_faldoi_occ.py  fast_sift.py  file_ev_flow.txt  file_ev_gt.txt  images.txt  prova.m  rescore_prunning.py  (+4 more)
src/: CMakeLists.txt  Documents_windows  Makefile  aux_energy_model.cpp  aux_energy_model.h  bicubic_interpolation.c  bicubic_interpolation.h  elap_recsep.c  energy_model.cpp  energy_model.h  energy_structures.h  evaluate_energy.cpp  evaluation.cpp  faldoi.cpp  fast_sift.py  global_faldoi.cpp  heuristic_interpolation.cpp  iio.c  iio.h  local_faldoi.cpp  mask.c  nltv_model.cpp  nltv_model.h  nltvcsad_model.cpp  nltvcsad_model.h  nltvcsadw_model.cpp  nltvcsadw_model.h  nltvw_model.cpp  nltvw_model.h  parameters.h  rescore_prunning.py  sparse_flow.cpp  tvcsad_model.cpp  tvcsad_model.h  tvcsadw_model.cpp  tvcsadw_model.h  tvl2_model.cpp  tvl2_model.h  tvl2_model_occ.cpp  tvl2_model_occ.h  (+7 more)
src/Results/: _exp_sim.tiff  _exp_var.flo
(+8 files in other folders)
